# envclasses

./: .gitignore  CHANGELOG.md  Makefile  Pipfile  README.md  envclasses.html  envclasses.py  index.html  mypy.ini  pyproject.toml  search.js  search.json  setup.cfg  setup.py  test_envclasses.py
.circleci/: config.yml
.github/workflows/: build.yml  test.yml
docs/: pydocmd.yml
envclasses/: __init__.py  utils.py
