[tool.poetry]
name = "envclasses"
version = "0.3.1"
description = "envclasses is a library to map fields on dataclass object to environment variables"
authors = ["Yukinari Tani <yukinarit84@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yukinarit/envclasses"
homepage = "https://yukinarit.github.io/envclasses/envclasses.html"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "*"
typing_inspect = ">=0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
ruff = "0.15.10"
ty = "0.0.29"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
