[project]
name = "envclasses"
dynamic = ["version"]
description = "envclasses is a library to map fields on dataclass object to environment variables"
authors = [{ name = "Yukinari Tani", email = "yukinarit84@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "pyyaml",
    "typing_inspect>=0.4.0",
]

[project.urls]
Repository = "https://github.com/yukinarit/envclasses"
Homepage = "https://yukinarit.github.io/envclasses/envclasses.html"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff==0.15.10",
    "ty==0.0.29",
]

[tool.hatch.version]
source = "vcs"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
